@@ -1,3 +1,9 @@
+2015-05-04  Charlie Zender  <zender@uci.edu>
+
+	* Tidy string functions by DYW and PVN
+
+	* Makefile generates LINUX_C?? compiler defaults for MACOSX
+
 2015-04-30  Charlie Zender  <zender@uci.edu>
 
 	* Wait until after ESMC_Finalize() to free dynamic memory provided to ESMF
